--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+}
+body{
+    font-family:'Noto Sans', sans-serif;
+}
+
+/* Clear floats after the columns */
+section::after {
+    content: "";
+    display: table;
+    clear: both;
+
+}
 .kucing
 {
     margin: 40px 0;
